tests/fails/arith3.t
import "compiler/liszt"
mesh = LoadMesh("examples/mesh.lmesh")

local vk = liszt_kernel(v)
    var x = 5 < true
end
mesh.vertices:map(vk)
